# DS_Project

./: .gitignore  DS_Project.ipynb  README.md  main.py  parser.py  tree.py  variables.py
c/: README.md  makefile
c/include/: common.h  token.h
c/src/: common.c  main.c  token.c
c/tests/: test_token.c
cpp/: CMakeLists.txt  README.md
cpp/examples/: sample_expressions.txt  test_cases.txt
cpp/include/: parser.hpp  token.hpp  tree.hpp  utils.hpp
cpp/src/: main.cpp  parser.cpp  test_parser.cpp  test_tree.cpp  tree.cpp  utils.cpp
python/: README.md  requirements.txt
python/examples/: sample_expressions.txt
python/src/: __init__.py  main.py  tree.py
python/tests/: __init__.py  test_evaluator.py
